# information-retrieval-system

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/src/system/: system.py
app/src/utils/: utils.py
src/app/: main.py
src/app/relevants/: computer science_relevants.csv  hello_relevants.csv
src/app/system/: system.py
